--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
   </head>
+  
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+   <header class='main-header'>
+	<img class='main-logo' src='https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg' width=20 height=20 alt='логотип nerds'>
+	 <ul>
+	  <li>студия</li>
+	  <li>клиенты</li>
+	  <li>магазин</li>
+	  <li>контакты</li>
+	 </ul>
+	 <button type='button'>корзина</button>
+         
+   </header>
+   
+   <article>
+	
+	
+	
+	
+	</article>
 
   </body>
 </html>
