Разметка личного проекта часть 1
Доделал разметку до карты и футера

--- a/index.html
+++ b/index.html
@@ -8,22 +8,61 @@
   <body>
    <header class='main-header'>
 	<img class='main-logo' src='https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg' width=20 height=20 alt='логотип nerds'>
-	 <ul>
-	  <li>студия</li>
-	  <li>клиенты</li>
-	  <li>магазин</li>
-	  <li>контакты</li>
-	 </ul>
-	 <button type='button'>корзина</button>
-         
-   </header>
-   
-   <article>
+		 <ul>
+		  <li> <a href='*'>студия</a> </li>
+		  <li> <a href='*'>клиенты</a> </li>
+		  <li> <a href='*'>магазин</a> </li>
+		  <li> <a href='*'>контакты</a> </li>
+		 </ul>
+		<ul>
+			<li><a href='*'>Корзина</a></li>
+		</ul>
+	</header>
+	<main>
+		<article>
+			<p><b>Долго, дорого, скурпулезно</b></p>
+			<p><h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2></p>
+			<a href='*'>Узнать больше</a>
+		</article>
+		<ul>
+			<li><h3>веб-сайты</h3><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p><a href='*'>заказать</a></li>
+			<li><h3>Приложения</h3><p>Покорите топ-10 приложений в AppStore и Google Play</p><a href='*'>заказать</a></li>
+			<li><h3>Презентации</h3><p>Вы даже не подозпеваете, насколько вы изумительны</p><a href='*'>заказать</a></li>
+		</ul>
+		<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+		<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
+		<h2>Выполняем заказы на разработку:</h2>
+		<ul>
+		<li>Веб сайтов любой сложности</li>
+		<li>Мобильных приложений для iOS и Android</li>
+		<li>Слайдшоу и видео для корпоративных презентаций</li>
+		</ul>
+		<table>
+			<caption>с 2004 года точность во всем:</caption>
+			<tr>
+				<td>146<sup>%</sup></td>
+				<td>100<sup>%</sup></td>
+				<td>50<sup>%</sup></td>
+			</tr>
+			<tr>
+				<td>уровень самоотдачи</td>
+				<td>Соблюдение сроков</td>
+				<td>минимальная предоплата</td>
+			</tr>
+		</table>
+		<section class='mainPartners'>
+			<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			</ul>
+		</section>
+		
+	</main>
+	<footer>
 	
 	
-	
-	
-	</article>
-
+	</footer>
   </body>
 </html>
