--- a/index.html
+++ b/index.html
@@ -1,68 +1,86 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  
-  <body>
-   <header class='main-header'>
-	<img class='main-logo' src='https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg' width=20 height=20 alt='логотип nerds'>
-		 <ul>
-		  <li> <a href='*'>студия</a> </li>
-		  <li> <a href='*'>клиенты</a> </li>
-		  <li> <a href='*'>магазин</a> </li>
-		  <li> <a href='*'>контакты</a> </li>
-		 </ul>
-		<ul>
-			<li><a href='*'>Корзина</a></li>
-		</ul>
-	</header>
-	<main>
-		<article>
-			<p><b>Долго, дорого, скурпулезно</b></p>
-			<p><h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2></p>
-			<a href='*'>Узнать больше</a>
-		</article>
-		<ul>
-			<li><h3>веб-сайты</h3><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p><a href='*'>заказать</a></li>
-			<li><h3>Приложения</h3><p>Покорите топ-10 приложений в AppStore и Google Play</p><a href='*'>заказать</a></li>
-			<li><h3>Презентации</h3><p>Вы даже не подозпеваете, насколько вы изумительны</p><a href='*'>заказать</a></li>
-		</ul>
-		<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
-		<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
-		<h2>Выполняем заказы на разработку:</h2>
-		<ul>
-		<li>Веб сайтов любой сложности</li>
-		<li>Мобильных приложений для iOS и Android</li>
-		<li>Слайдшоу и видео для корпоративных презентаций</li>
-		</ul>
-		<table>
-			<caption>с 2004 года точность во всем:</caption>
-			<tr>
-				<td>146<sup>%</sup></td>
-				<td>100<sup>%</sup></td>
-				<td>50<sup>%</sup></td>
-			</tr>
-			<tr>
-				<td>уровень самоотдачи</td>
-				<td>Соблюдение сроков</td>
-				<td>минимальная предоплата</td>
-			</tr>
-		</table>
-		<section class='mainPartners'>
-			<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			</ul>
-		</section>
-		
-	</main>
-	<footer>
-	
-	
-	</footer>
-  </body>
-</html>
+	<html lang="ru">
+		<head>
+			<meta charset="utf-8">
+			<title>HTML Academy: Нёрдс</title>
+		</head>
+
+		<body>
+			<header class="main-header">
+				<nav>
+					<a href="#">
+						<img class="main-logo" src="https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg" width=20 height=20 alt="логотип nerds">
+					</a>
+					<ul>
+						<li> <a href="/">студия</a> </li>
+						<li> <a href="/">клиенты</a> </li>
+						<li> <a href="nerds-catalog.html">магазин</a> </li>
+						<li> <a href="/">контакты</a> </li>
+					</ul>
+					<ul>
+						<li><a href="/">Корзина</a></li>
+					</ul>
+				</nav>
+			</header>
+		<main class="main-container">
+			<article>
+				<p><b>Долго, дорого, скурпулезно</b></p>
+				<p><h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2></p>
+				<a href="/">Узнать больше</a>
+			</article>
+				<ul>
+					<li><h3>веб-сайты</h3><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p><a href="/">заказать</a></li>
+					<li><h3>Приложения</h3><p>Покорите топ-10 приложений в AppStore и Google Play</p><a href="/">заказать</a></li>
+					<li><h3>Презентации</h3><p>Вы даже не подозпеваете, насколько вы изумительны</p><a href="/">заказать</a></li>
+				</ul>
+			<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+			<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
+			<h2>Выполняем заказы на разработку:</h2>
+				<ul>
+					<li>Веб сайтов любой сложности</li>
+					<li>Мобильных приложений для iOS и Android</li>
+					<li>Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			<table>
+				<caption>с 2004 года точность во всем:</caption>
+					<tr>
+						<td>146<sup>%</sup></td>
+						<td>100<sup>%</sup></td>
+						<td>50<sup>%</sup></td>
+					</tr>
+					<tr>
+						<td>уровень самоотдачи</td>
+						<td>Соблюдение сроков</td>
+						<td>минимальная предоплата</td>
+					</tr>
+			</table>
+			<section class="mainPartners">
+				<ul>
+					<li>htmlAcademy</li>
+					<li>borodinski</li>
+					<li>pink</li>
+					<li>mishka</li>
+				</ul>
+			</section>
+		</main>	
+			<footer>
+				<section>
+					<div class="map"></div>
+					<ul>
+						<li><h2>nёrds design studio</h2>
+						<p>1191168, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+						<p>тел. +7 (812) 275-75-75</p>
+						<a class="writeToUs"></a>
+						</li>
+					</ul>
+				</section>
+					<ul class="socialButtons">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				<p>Давайте дружить, это выгодно!</p>
+				<p><h3>Скидка 10% для друзей из социальных сетей</h3></p>
+			</footer>
+		</body>
+	</html>
