--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<header class="main-header">
 				<nav>
 					<a href="#">
-						<img class="main-logo" src="https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg" width=20 height=20 alt="логотип nerds">
+					<img class="main-logo" src="https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg" width=20 height=20 alt="логотип nerds">
 					</a>
 					<ul>
 						<li> <a href="/">студия</a> </li>
@@ -18,31 +18,31 @@
 						<li> <a href="/">контакты</a> </li>
 					</ul>
 					<ul>
-						<li><a href="/">Корзина</a></li>
+						<li> <a href="/">Корзина</a></li>
 					</ul>
 				</nav>
 			</header>
-		<main class="main-container">
-			<article>
-				<p><b>Долго, дорого, скурпулезно</b></p>
-				<p><h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2></p>
-				<a href="/">Узнать больше</a>
-			</article>
+			<main class="main-container">
+				<article>
+					<p><b>Долго, дорого, скурпулезно</b></p>
+					<p><h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2></p>
+					<a href="/">Узнать больше</a>
+				</article>
 				<ul>
 					<li><h3>веб-сайты</h3><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p><a href="/">заказать</a></li>
 					<li><h3>Приложения</h3><p>Покорите топ-10 приложений в AppStore и Google Play</p><a href="/">заказать</a></li>
 					<li><h3>Презентации</h3><p>Вы даже не подозпеваете, насколько вы изумительны</p><a href="/">заказать</a></li>
 				</ul>
-			<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
-			<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
-			<h2>Выполняем заказы на разработку:</h2>
+				<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+				<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
+				<h2>Выполняем заказы на разработку:</h2>
 				<ul>
 					<li>Веб сайтов любой сложности</li>
 					<li>Мобильных приложений для iOS и Android</li>
 					<li>Слайдшоу и видео для корпоративных презентаций</li>
 				</ul>
-			<table>
-				<caption>с 2004 года точность во всем:</caption>
+				<table>
+					<caption>с 2004 года точность во всем:</caption>
 					<tr>
 						<td>146<sup>%</sup></td>
 						<td>100<sup>%</sup></td>
@@ -53,16 +53,16 @@
 						<td>Соблюдение сроков</td>
 						<td>минимальная предоплата</td>
 					</tr>
-			</table>
-			<section class="mainPartners">
-				<ul>
-					<li>htmlAcademy</li>
-					<li>borodinski</li>
-					<li>pink</li>
-					<li>mishka</li>
-				</ul>
-			</section>
-		</main>	
+				</table>
+				<section class="mainPartners">
+					<ul>
+						<li>htmlAcademy</li>
+						<li>borodinski</li>
+						<li>pink</li>
+						<li>mishka</li>
+					</ul>
+				</section>
+			</main>	
 			<footer>
 				<section>
 					<div class="map"></div>
@@ -75,9 +75,9 @@
 					</ul>
 				</section>
 					<ul class="socialButtons">
-						<li></li>
-						<li></li>
-						<li></li>
+						<li><a href="/">vk</a></li>
+						<li><a href="/">fb</a></li>
+						<li><a href="/">inst</a></li>
 					</ul>
 				<p>Давайте дружить, это выгодно!</p>
 				<p><h3>Скидка 10% для друзей из социальных сетей</h3></p>
