--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 			<header class="main-header">
 				<nav>
 					<a href="#">
-					<img class="main-logo" src="https://ampir.ru/upload/iblock/25b/25b3b7ff91178c54ebe666afafc5d933.jpeg" width=20 height=20 alt="логотип nerds">
+					<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
 					</a>
 					<ul>
-						<li> <a href="/">студия</a> </li>
-						<li> <a href="/">клиенты</a> </li>
-						<li> <a href="nerds-catalog.html">магазин</a> </li>
-						<li> <a href="/">контакты</a> </li>
+						<li> <a href="/">Студия</a> </li>
+						<li> <a href="/">Клиенты</a> </li>
+						<li> <a href="nerds-catalog.html">Магазин</a> </li>
+						<li> <a href="/">Контакты</a> </li>
 					</ul>
 					<ul>
-						<li> <a href="/">Корзина</a></li>
+						<li>  
+							<a href="/"> <img class="cart-icon" src="img/svg-nerds/cart-icon.svg" width=15 height=15 alt="логотип корзина"> 
+							<strong>Корзина</strong>
+							</a>
+						</li>
 					</ul>
 				</nav>
 			</header>
