--- a/index.html
+++ b/index.html
@@ -71,18 +71,19 @@
 				<section>
 					<div class="map"></div>
 					<ul>
-						<li><h2>nёrds design studio</h2>
-						<p>1191168, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-						<p>тел. +7 (812) 275-75-75</p>
-						<a class="writeToUs"></a>
+						<li>
+							<h2>nёrds design studio</h2>
+							<p>1191168, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+							<p>тел. +7 (812) 275-75-75</p>
+							<a class="writeToUs"></a>
 						</li>
 					</ul>
 				</section>
-					<ul class="socialButtons">
-						<li><a href="/">vk</a></li>
-						<li><a href="/">fb</a></li>
-						<li><a href="/">inst</a></li>
-					</ul>
+				<ul class="socialButtons">
+					<li><a href="/">vk</a></li>
+					<li><a href="/">fb</a></li>
+					<li><a href="/">inst</a></li>
+				</ul>
 				<p>Давайте дружить, это выгодно!</p>
 				<p><h3>Скидка 10% для друзей из социальных сетей</h3></p>
 			</footer>
