--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -88,7 +88,7 @@
 					<li>
 						<a href="/">
 							<img src="img/img-sedona.jpg" width=362 height=576>
-							<strong>9 900 руб.</strong>
+							<p>9 900 руб.</p>
 							<h2>Sedona</h2>
 							<h3>Информационный сайт  для туристов</h3>
 						</a>
@@ -96,7 +96,7 @@
 					<li>
 						<a href="/">
 						<img src="img/img-pink.jpg" width=362 height=576>
-						<strong>9 900 руб.</strong>
+						<p>9 900 руб.</p>
 						<h2>Pink App</h2>
 						<h3>Продуктовый лендинг приложения для iOS и Android</h3>
 						</a>
@@ -104,14 +104,14 @@
 					<li>
 						<a href="/">
 						<img src="img/img-barbershop.jpg" width=362 height=576>
-						<strong>9 900 руб.</strong>
+						<p>9 900 руб.</p>
 						<h2>Barbershop</h2>
 						<h3>Сайт салона красоты. Для мужчин, да.</h3>
 						</a>
 					</li>
 					<li>
 						<a href ="/">
-						<strong>9 900 руб.</strong>
+						<p>9 900 руб.</p>
 						<img src="img/img-mishka.jpg" width=362 height=576>
 						<h2>MISHKA</h2>
 						<h3>Интернет-магазин  вязаных игрушек</h3>
@@ -119,7 +119,7 @@
 					</li>
 					<li>
 						<a href="/">
-						<strong>9 900 руб.</strong>
+						<p>9 900 руб.</p>
 						<img src="img/img-aplus.jpg" width=362 height=576>
 						<h2>A Plus</h3>
 						<h3>Лендинг курсов повышения квалификации</h3>
@@ -127,7 +127,7 @@
 					</li>
 					<li>
 						<a href="/">
-						<strong>9 900 руб.</strong>
+						<p>9 900 руб.</p>
 						<img src="img/img-kvast.jpg" width=362 height=576>
 						<h2>КВАСТ</h2>
 						<h3>Промо-сайт производителя крафтового кваса</h3>
@@ -146,17 +146,17 @@
 					<div class="map"></div>
 					<ul>
 						<li><h2>NЁRDS DESIGN STUDIO</h2>
-						<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8  тел. +7 (</p>
+						<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p>
 						<p>тел. +7 (812) 275-75-75</p>
 						<a class="writeToUs"></a>
 						</li>
 					</ul>
 				</section>
-					<ul class="socialButtons">
-						<li><a href="/">vk</a></li>
-						<li><a href="/">fb</a></li>
-						<li><a href="/">inst</a></li>
-					</ul>
+				<ul class="socialButtons">
+					<li><a href="/">vk</a></li>
+					<li><a href="/">fb</a></li>
+					<li><a href="/">inst</a></li>
+				</ul>
 				<p>Давайте дружить, это выгодно!</p>
 				<p><h3>Скидка 10% для друзей из социальных сетей</h3></p>
 			</footer>
