убрал пробелы и разделил всё, что можно разделить

--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
 					<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
 					</a>
 					<ul>
-						<li> <a href="/">Студия</a> </li>
-						<li> <a href="/">Клиенты</a> </li>
-						<li> <a href="nerds-catalog.html">Магазин</a> </li>
-						<li> <a href="/">Контакты</a> </li>
+						<li>
+							<a href="/">Студия</a>
+						</li>
+						<li>
+							<a href="/">Клиенты</a>
+						</li>
+						<li>
+							<a href="nerds-catalog.html">Магазин</a>
+						</li>
+						<li>
+							<a href="/">Контакты</a>
+						</li>
 					</ul>
 					<ul>
-						<li>  
-							<a href="/"> <img class="cart-icon" src="img/svg-nerds/cart-icon.svg" width=15 height=15 alt="логотип корзина"> 
-							<strong>Корзина</strong>
+						<li>
+							<a href="/">
+								<img class="cart-icon" src="img/svg-nerds/cart-icon.svg" width=15 height=15 alt="логотип корзина">
+								<strong>Корзина</strong>
 							</a>
 						</li>
 					</ul>
@@ -28,17 +37,34 @@
 			</header>
 			<main class="main-container">
 				<article>
-					<p><b>Долго, дорого, скурпулезно</b></p>
-					<p><h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2></p>
+					<p>
+						<b>Долго, дорого, скурпулезно</b>
+					</p>
+					<p>
+						<h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2>
+					</p>
 					<a href="/">Узнать больше</a>
 				</article>
 				<ul>
-					<li><h3>веб-сайты</h3><p>Мир никогда не будет прежним после того как увидит ваш сайт!</p><a href="/">заказать</a></li>
-					<li><h3>Приложения</h3><p>Покорите топ-10 приложений в AppStore и Google Play</p><a href="/">заказать</a></li>
-					<li><h3>Презентации</h3><p>Вы даже не подозпеваете, насколько вы изумительны</p><a href="/">заказать</a></li>
+					<li>
+						<h3>веб-сайты</h3>
+						<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+						<a href="/">заказать</a>
+					</li>
+					<li>
+						<h3>Приложения</h3>
+						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+						<a href="/">заказать</a>
+					</li>
+					<li>
+						<h3>Презентации</h3>
+						<p>Вы даже не подозпеваете, насколько вы изумительны</p>
+						<a href="/">заказать</a>
+					</li>
 				</ul>
 				<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
-				<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
+				<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. 
+				Работаем непокладая рук, как роботы.</p>
 				<h2>Выполняем заказы на разработку:</h2>
 				<ul>
 					<li>Веб сайтов любой сложности</li>
@@ -66,7 +92,7 @@
 						<li>mishka</li>
 					</ul>
 				</section>
-			</main>	
+			</main>
 			<footer>
 				<section>
 					<div class="map"></div>
@@ -80,12 +106,20 @@
 					</ul>
 				</section>
 				<ul class="socialButtons">
-					<li><a href="/">vk</a></li>
-					<li><a href="/">fb</a></li>
-					<li><a href="/">inst</a></li>
+					<li>
+						<a href="/">vk</a>
+					</li>
+					<li>
+						<a href="/">fb</a>
+					</li>
+					<li>
+						<a href="/">inst</a>
+					</li>
 				</ul>
 				<p>Давайте дружить, это выгодно!</p>
-				<p><h3>Скидка 10% для друзей из социальных сетей</h3></p>
+				<p>
+					<h3>Скидка 10% для друзей из социальных сетей</h3>
+				</p>
 			</footer>
 		</body>
 	</html>
