исправил заглавные на маленькие

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<header class="main-header">
 				<nav>
 					<a href="#">
-					<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
+						<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
 					</a>
 					<ul>
 						<li>
@@ -29,7 +29,7 @@
 						<li>
 							<a href="/">
 								<img class="cart-icon" src="img/svg-nerds/cart-icon.svg" width=15 height=15 alt="логотип корзина">
-								<strong>Корзина</strong>
+								<p>Корзина</p>
 							</a>
 						</li>
 					</ul>
@@ -37,9 +37,7 @@
 			</header>
 			<main class="main-container">
 				<article>
-					<p>
-						<b>Долго, дорого, скурпулезно</b>
-					</p>
+					<p>Долго, дорого, скурпулезно</p>
 					<p>
 						<h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2>
 					</p>
