--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -9,7 +9,7 @@
 			<header class="main-header">
 				<nav class="main-navigation">
 					<a class="main-header-logo" href="index.html">
-					<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
+						<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
 					</a>
 					<ul>
 						<li>
@@ -117,7 +117,7 @@
 						<a href ="/">
 							<p>9 900 руб.</p>
 							<img src="img/img-mishka.jpg" width=362 height=576>
-							<h2>MISHKA</h2>
+							<h2>mishka</h2>
 							<h3>Интернет-магазин  вязаных игрушек</h3>
 						</a>
 					</li>
@@ -133,7 +133,7 @@
 						<a href="/">
 							<p>9 900 руб.</p>
 							<img src="img/img-kvast.jpg" width=362 height=576>
-							<h2>КВАСТ</h2>
+							<h2>кваст</h2>
 							<h3>Промо-сайт производителя крафтового кваса</h3>
 						</a>
 					</li>
@@ -150,7 +150,7 @@
 					<div class="map"></div>
 					<ul>
 						<li>
-							<h2>NЁRDS DESIGN STUDIO</h2>
+							<h2>nёrds design studio</h2>
 							<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p>
 							<p>тел. +7 (812) 275-75-75</p>
 							<a class="writeToUs"></a>
@@ -188,7 +188,7 @@
 						</textarea>
 						<span>Текст письма:</span>
 					</label>
-					<input type="submit" value="ОТПРАВИТЬ">
+					<input type="submit" value="отправить">
 				</form>
 			</section>
 		</body>
