--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<a href="/">заказать</a>
 					</li>
 				</ul>
-				<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+				<h2 class="about-us">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
 				<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. 
 				Работаем непокладая рук, как роботы.</p>
 				<h2>Выполняем заказы на разработку:</h2>
