--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -35,7 +35,7 @@
 			<main class="main-catalog">
 				<aside class="catalog-filter">
 					<h1>Магазин готовых шаблонов</h1>
-					<form action="/" method="post">
+					<form class="farm-katalog" action="/" method="post">
 						<label>
 							<input type="range" min="0" max="15500" step="1" value="7750">
 							<span>стоимость</span>
