убрал заголовки и оставил <p>

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 			<main class="main-container">
 				<article>
 					<p>Долго, дорого, скурпулезно</p>
-					<p>
-						<h2>Математически вывереный дизайн для вашего сайта или мобильного приложения</h2>
-					</p>
+					<p>Математически вывереный дизайн для вашего сайта или мобильного приложения</p>
 					<a href="/">Узнать больше</a>
 				</article>
 				<ul>
@@ -115,9 +113,7 @@
 					</li>
 				</ul>
 				<p>Давайте дружить, это выгодно!</p>
-				<p>
-					<h3>Скидка 10% для друзей из социальных сетей</h3>
-				</p>
+				<p>Скидка 10% для друзей из социальных сетей</p>
 			</footer>
 		</body>
 	</html>
