--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -169,9 +169,7 @@
 					</li>
 				</ul>
 				<p>Давайте дружить, это выгодно!</p>
-				<p>
-					<h3>Скидка 10% для друзей из социальных сетей</h3>
-				</p>
+				<p>Скидка 10% для друзей из социальных сетей</p>
 			</footer>
 			<section class="write us">
 				<form action="/" method="post">
