--- a/index.html
+++ b/index.html
@@ -36,11 +36,31 @@
 				</nav>
 			</header>
 			<main class="main-container">
-				<article>
-					<p>Долго, дорого, скурпулезно</p>
-					<p>Математически вывереный дизайн для вашего сайта или мобильного приложения</p>
-					<a href="/">Узнать больше</a>
-				</article>
+				<ul class="main-slider">
+					<li>
+						<a href="/">
+							<img src="img/nerds-index-slide1.png" width="698" height="413">
+							<p>Долго, дорого,  скрупулезно.</p>
+							<p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+							<p>Узнать больше</p>
+						</a>
+					</li>
+					<li>
+						<a href="/">
+							<img src="img/nerds-index-slide2.png" width="663" height="430">
+							<p>Любим математику как никто другой</p>
+							<p>Никакого креатива, только математические формулы  для расчета идеальных пропорций</p>
+							<p>Узнать больше</p>
+						</a>
+					</li>
+					<li>
+						<a href="/">
+						<img src="img/nerds-index-slide3.png" width="759" height="411">
+							<p>Только ночь, только хардкор</p>
+							<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+							<p>Узнать больше</p>
+						</a>
+					</li>
 				<ul>
 					<li>
 						<h3>веб-сайты</h3>
