добавил карту в футер

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -148,6 +148,7 @@
 			<footer>
 				<section>
 					<div class="map"></div>
+					<img src="img/map.png" width="1725" height="808" alt="расположение организации на карте">
 					<ul>
 						<li>
 							<h2>nёrds design studio</h2>
