--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			<footer>
 				<section>
 					<div class="map"></div>
+					<img src="img/map.png" width="1725" height="808" alt="расположение организации на карте">
 					<ul>
 						<li>
 							<h2>nёrds design studio</h2>
