--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -138,11 +138,11 @@
 						</a>
 					</li>
 				</ul>
-				<div>
-					<a href="/">1</a>
-					<a href="/">2</a>
-					<a href="/">3</a>
-					<a href="/">следующая</a>
+				<div class="slide-button">
+					<button>1</button>
+					<button>2</button>
+					<button>3</button>
+					<button>следующая</button>
 				</div>
 			</main>
 			<footer>
@@ -154,7 +154,7 @@
 							<h2>nёrds design studio</h2>
 							<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p>
 							<p>тел. +7 (812) 275-75-75</p>
-							<a class="writeToUs"></a>
+							<a class="writeToUs">Напишите нам</a>
 						</li>
 					</ul>
 				</section>
