--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 					</ul>
 				</section>
 			</main>
-			<footer>
+						<footer>
 				<section>
 					<div class="map"></div>
 					<img src="img/map.png" width="1725" height="808" alt="расположение организации на карте">
 					<ul>
 						<li>
 							<h2>nёrds design studio</h2>
-							<p>1191168, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+							<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p>
 							<p>тел. +7 (812) 275-75-75</p>
 							<a class="writeToUs"></a>
 						</li>
@@ -136,5 +136,23 @@
 				<p>Давайте дружить, это выгодно!</p>
 				<p>Скидка 10% для друзей из социальных сетей</p>
 			</footer>
+			<section class="write us">
+				<form action="/" method="post">
+					<label>
+						<input type="text" name="yourName" placeholder="Имя Фамилия">
+						<span>Ваше имя:</span>
+					</label>
+					<label>
+						<input type="text" name="yourE-mail" placeholder="email@example.com">
+						<span>Ваш e-mail:</span>
+					</label>
+					<label>
+						<textarea name="textOfTheLetter" placeholder="В свободной форме">
+						</textarea>
+						<span>Текст письма:</span>
+					</label>
+					<input type="submit" value="отправить">
+				</form>
+			</section>
 		</body>
 	</html>
