--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<td>минимальная предоплата</td>
 					</tr>
 				</table>
-				<section class="mainPartners">
+				<section class="main-partners">
 					<ul>
 						<li>htmlAcademy</li>
 						<li>borodinski</li>
@@ -118,11 +118,11 @@
 							<h2>nёrds design studio</h2>
 							<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p>
 							<p>тел. +7 (812) 275-75-75</p>
-							<a class="writeToUs"></a>
+							<a class="write-to-us"></a>
 						</li>
 					</ul>
 				</section>
-				<ul class="socialButtons">
+				<ul class="social-buttons">
 					<li>
 						<a href="/">vk</a>
 					</li>
@@ -136,18 +136,18 @@
 				<p>Давайте дружить, это выгодно!</p>
 				<p>Скидка 10% для друзей из социальных сетей</p>
 			</footer>
-			<section class="write us">
+			<section class="write-us">
 				<form action="/" method="post">
 					<label>
-						<input type="text" name="yourName" placeholder="Имя Фамилия">
+						<input type="text" name="your-name" placeholder="Имя Фамилия">
 						<span>Ваше имя:</span>
 					</label>
 					<label>
-						<input type="text" name="yourE-mail" placeholder="email@example.com">
+						<input type="text" name="your-mail" placeholder="email@example.com">
 						<span>Ваш e-mail:</span>
 					</label>
 					<label>
-						<textarea name="textOfTheLetter" placeholder="В свободной форме">
+						<textarea name="text-ofthe-letter" placeholder="В свободной форме">
 						</textarea>
 						<span>Текст письма:</span>
 					</label>
