--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 		<head>
 			<meta charset="utf-8">
 			<title>HTML Academy: Нёрдс</title>
+			<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+			<link href="css/normalize.css" rel="stylesheet">
+			<link href="css/style.css" rel="stylesheet">
 		</head>
 
 		<body>
 			<header class="main-header">
-				<nav>
+				<nav class="user-navigation">
 					<a href="#">
 						<img class="main-logo" src="img/svg-nerds/nerds-logo.svg" width=160 height=65 alt="логотип nerds">
 					</a>
