--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 					<li>
 						<a href="/">
 							<img src="img/nerds-index-slide1.png" width="698" height="413">
-							<p>Долго, дорого,  скрупулезно.</p>
-							<p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
-							<p>Узнать больше</p>
+							<p class="first-p-slider">Долго, дорого,  скрупулезно.</p>
+							<p class="last-p-slider">Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+							<p class="btn-p-slider">Узнать больше</p>
 						</a>
 					</li>
 					<li>
 						<a href="/">
 							<img src="img/nerds-index-slide2.png" width="663" height="430">
-							<p>Любим математику как никто другой</p>
-							<p>Никакого креатива, только математические формулы  для расчета идеальных пропорций</p>
-							<p>Узнать больше</p>
+							<p class="first-p-slider">Любим математику как никто другой</p>
+							<p class="last-p-slider">Никакого креатива, только математические формулы  для расчета идеальных пропорций</p>
+							<p class="btn-p-slider">Узнать больше</p>
 						</a>
 					</li>
 					<li>
 						<a href="/">
 						<img src="img/nerds-index-slide3.png" width="759" height="411">
-							<p>Только ночь, только хардкор</p>
-							<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
-							<p>Узнать больше</p>
+							<p class="first-p-slider">Только ночь, только хардкор</p>
+							<p class="last-p-slider">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+							<p class="btn-p-slider">Узнать больше</p>
 						</a>
 					</li>
-				<ul>
+				<ul class="our-service">
 					<li>
 						<h3>веб-сайты</h3>
 						<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
@@ -81,34 +81,38 @@
 						<a href="/">заказать</a>
 					</li>
 				</ul>
-				<h2 class="about-us">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
-				<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. 
-				Работаем непокладая рук, как роботы.</p>
-				<h2>Выполняем заказы на разработку:</h2>
-				<ul>
-					<li>Веб сайтов любой сложности</li>
-					<li>Мобильных приложений для iOS и Android</li>
-					<li>Слайдшоу и видео для корпоративных презентаций</li>
-				</ul>
-				<table>
+				<div class="about-us">
+					<h2>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+					<p>исповедуем принципы минимализма и чистоты. Савим математический расчет превыше креатива. 
+					Работаем непокладая рук, как роботы.</p>
+				</div>
+				<div class="orders">
+					<h2>Выполняем заказы на разработку:</h2>
+					<ul>
+						<li>Веб сайтов любой сложности</li>
+						<li>Мобильных приложений для iOS и Android</li>
+						<li>Слайдшоу и видео для корпоративных презентаций</li>
+					</ul>
+				</div>
+				<table class="stats">
 					<caption>с 2004 года точность во всем:</caption>
-					<tr>
+					<tr class="first-tbl">
 						<td>146<sup>%</sup></td>
 						<td>100<sup>%</sup></td>
 						<td>50<sup>%</sup></td>
 					</tr>
-					<tr>
+					<tr class="last-tbl">
 						<td>уровень самоотдачи</td>
 						<td>Соблюдение сроков</td>
 						<td>минимальная предоплата</td>
 					</tr>
 				</table>
-				<section class="main-partners">
-					<ul>
-						<li>htmlAcademy</li>
-						<li>borodinski</li>
-						<li>pink</li>
-						<li>mishka</li>
+				<section>
+					<ul class="main-partners">
+						<li class="htmlAcademy"></li>
+						<li class="borodinski"></li>
+						<li class="pink"></li>
+						<li class="mishka"></li>
 					</ul>
 				</section>
 			</main>
@@ -116,12 +120,12 @@
 				<section>
 					<div class="map"></div>
 					<img src="img/map.png" width="1725" height="808" alt="расположение организации на карте">
-					<ul>
+					<ul class="adress">
 						<li>
 							<h2>nёrds design studio</h2>
 							<p>191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p>
 							<p>тел. +7 (812) 275-75-75</p>
-							<a class="write-to-us"></a>
+							<a href="/" class="write-to-us">Напишите нам</a>
 						</li>
 					</ul>
 				</section>
@@ -136,8 +140,10 @@
 						<a href="/">inst</a>
 					</li>
 				</ul>
-				<p>Давайте дружить, это выгодно!</p>
-				<p>Скидка 10% для друзей из социальных сетей</p>
+				<div class="slogan-footer">
+					<p>Давайте дружить, это выгодно!</p>
+					<p>Скидка 10% для друзей из социальных сетей</p>
+				</div>
 			</footer>
 			<section class="write-us">
 				<form action="/" method="post">
