--- a/index.html
+++ b/index.html
@@ -109,10 +109,26 @@
 				</table>
 				<section>
 					<ul class="main-partners">
-						<li class="htmlAcademy"></li>
-						<li class="borodinski"></li>
-						<li class="pink"></li>
-						<li class="mishka"></li>
+						<li class="htmlAcademy">
+							<a href="/">
+								<img src="img/htmlaсademy.png" width="199px" height="68px">
+							</a>
+						</li>
+						<li class="borodinski">
+							<a href="/">
+								<img src="img/logo-2.png" width="209px" height="90px">
+							</a>
+						</li>
+						<li class="pink">
+							<a href="/">
+									<img src="img/pink.png" width="185px" height="52px">
+							</a>
+						</li>
+						<li class="mishka">
+							<a href="/">
+									<img src="img/mishka.png" width="173px" height="84px">
+							</a>
+						</li>
 					</ul>
 				</section>
 			</main>
