Заголовки заменены на p
классы перепроверил. они были через тире. есть подозрение, что не дошли прошлые изменения

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -93,48 +93,48 @@
 						<a href="/">
 							<img src="img/img-sedona.jpg" width=362 height=576>
 							<p>9 900 руб.</p>
-							<h2>Sedona</h2>
-							<h3>Информационный сайт  для туристов</h3>
+							<p>Sedona</p>
+							<p>Информационный сайт  для туристов</p>
 						</a>
 					</li>
 					<li>
 						<a href="/">
 							<img src="img/img-pink.jpg" width=362 height=576>
 							<p>9 900 руб.</p>
-							<h2>Pink App</h2>
-							<h3>Продуктовый лендинг приложения для iOS и Android</h3>
+							<p>Pink App</p>
+							<p>Продуктовый лендинг приложения для iOS и Android</p>
 						</a>
 					</li>
 					<li>
 						<a href="/">
 							<img src="img/img-barbershop.jpg" width=362 height=576>
 							<p>9 900 руб.</p>
-							<h2>Barbershop</h2>
-							<h3>Сайт салона красоты. Для мужчин, да.</h3>
+							<p>Barbershop</p>
+							<p>Сайт салона красоты. Для мужчин, да.</p>
 						</a>
 					</li>
 					<li>
 						<a href ="/">
 							<p>9 900 руб.</p>
 							<img src="img/img-mishka.jpg" width=362 height=576>
-							<h2>mishka</h2>
-							<h3>Интернет-магазин  вязаных игрушек</h3>
+							<p>mishka</p>
+							<p>Интернет-магазин  вязаных игрушек</p>
 						</a>
 					</li>
 					<li>
 						<a href="/">
 							<p>9 900 руб.</p>
 							<img src="img/img-aplus.jpg" width=362 height=576>
-							<h2>A Plus</h3>
-							<h3>Лендинг курсов повышения квалификации</h3>
+							<p>A Plus</p>
+							<p>Лендинг курсов повышения квалификации</p>
 						</a>
 					</li>
 					<li>
 						<a href="/">
 							<p>9 900 руб.</p>
 							<img src="img/img-kvast.jpg" width=362 height=576>
-							<h2>кваст</h2>
-							<h3>Промо-сайт производителя крафтового кваса</h3>
+							<p>кваст</p>
+							<p>Промо-сайт производителя крафтового кваса</p>
 						</a>
 					</li>
 				</ul>
